--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -13,17 +13,16 @@ body {
 }
 
 .search-form {
+  position: fixed;
+  top: 0;
+  scroll-behavior: unset;
   width: 100%;
   height: 50px;
   display: flex;
   justify-content: center;
   align-items: center;
   text-align: center;
-  background: linear-gradient(
-    180deg,
-    rgba(4, 188, 239, 0.7) 45%,
-    rgba(231, 228, 39, 0.7) 60%
-  );
+  background: linear-gradient(180deg, #04bcef 40%, #e7e427 60%);
 }
 
 input {
@@ -53,6 +52,8 @@ input {
 }
 
 .load-more {
+  margin-left: auto;
+  margin-right: auto;
   padding: 5px 5px;
   width: 80px;
   border-radius: 5px;
@@ -70,4 +71,19 @@ input {
 
 .is-hidden {
   display: none;
+}
+
+.gallery {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  margin-top: 50px;
+  padding: 15px;
+  height: 100%;
+}
+
+.photo-card {
+  display: flex;
+  width: calc((100% - 60px) / 4);
+  outline: 1px solid tomato;
 }
