--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -23,6 +23,7 @@ body {
   align-items: center;
   text-align: center;
   background: linear-gradient(180deg, #04bcef 40%, #e7e427 60%);
+  box-shadow: 0px 3px 7px 0px #94c3cc;
 }
 
 input {
@@ -33,6 +34,7 @@ input {
   border: 1px solid #0000ff;
   border-right: none;
   outline: none;
+  box-shadow: 1px 3px 7px 0px #5d79cc;
 }
 
 .let-search,
@@ -43,6 +45,7 @@ input {
   height: 25px;
   border: none;
   background-color: #0000ff;
+  box-shadow: 1px 3px 7px 0px #5d79cc;
 }
 
 .let-search {
@@ -80,14 +83,23 @@ input {
 .gallery {
   display: flex;
   flex-wrap: wrap;
-  gap: 20px;
+  gap: 15px;
   margin-top: 50px;
   padding: 15px;
   height: 100%;
 }
 
 .photo-card {
+  /* display: flex; */
+  width: calc((100% - 45px) / 4);
+  border-radius: 0 0 4px 4px;
+  box-shadow: 1px 3px 7px 0px #94c3cc;
+  /* outline: 1px solid tomato; */
+}
+
+.info {
   display: flex;
-  width: calc((100% - 60px) / 4);
-  outline: 1px solid tomato;
+  justify-content: space-between;
+  padding: 5px;
+  font-size: 14;
 }
