--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -14,12 +14,14 @@ body {
 
 img {
   display: block;
+  height: 200px;
   max-width: 100%;
 }
 
 .search-form {
   position: fixed;
   top: 0;
+  left: 0;
   scroll-behavior: unset;
   width: 100%;
   height: 50px;
