--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -93,7 +93,7 @@ input {
   display: flex;
   flex-wrap: wrap;
   gap: 10px;
-  justify-content: space-between;
+  justify-content: center;
   margin-top: 50px;
   padding: 10px;
 }
