--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -105,6 +105,13 @@ input {
   box-shadow: 1px 3px 7px 0px #94c3cc;
 }
 
+.photo-card:hover
+/* ,
+.photo-card:focus  */ {
+  /* background-color: red;    */
+  box-shadow: 0px 0px 5px 4px #94c3cc;
+}
+
 .info {
   display: flex;
   justify-content: space-between;
